fixed href directory issue

--- a/ui-ux.html
+++ b/ui-ux.html
@@ -32,7 +32,7 @@
 					<a href="./home.html">HOME</a>
 				</li>
 				<li>
-					<a href="./3d.html">3D</a>
+					<a href="./3D.html">3D</a>
 				</li>
 				<li>
 					<a href="#UI-UX">UI/UX</a>
