--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<a href="#home">HOME</a>
 				</li>
 				<li>
-					<a href="./3d.html">3D</a>
+					<a href="./3D.html">3D</a>
 				</li>
 				<li>
 					<a href="./ui-ux.html">UI/UX</a>
