--- a/3D.html
+++ b/3D.html
@@ -29,7 +29,7 @@
          <ul>
 
 				<li>
-					<a href="./home.html">HOME</a>
+					<a href="./index.html">HOME</a>
 				</li>
 				<li>
 					<a href="#3D">3D</a>
