--- a/ui-ux.html
+++ b/ui-ux.html
@@ -29,7 +29,7 @@
          <ul>
 
 				<li>
-					<a href="./index.html">HOME</a>
+					<a href="./">HOME</a>
 				</li>
 				<li>
 					<a href="./3D.html">3D</a>
