new page organization and updated homepage

--- a/3D.html
+++ b/3D.html
@@ -26,11 +26,9 @@
   </head>
   <body>
     <div id="banner" class="navbar navbar-default navbar-static-top">
-         <ul>
+      <a class="home-button" href="./">Noah Sablan</a>
+      <ul>
 
-				<li>
-					<a href="./">HOME</a>
-				</li>
 				<li>
 					<a href="#3D">3D</a>
 				</li>
@@ -50,17 +48,19 @@
   </div>
 
   <div id="3D" class = "panel">
-    <div class="container">
-
-      <!-- TITLE -->
-      <div class="row standard-margin project-showcase page-title">
-        <div class="col-6 name-Noah">
+    <div class="row standard-margin project-showcase page-title">
+        <div class="col-6 name-section">
          3D
         </div>
         <div class="col-6">
 
         </div>
       </div>
+
+    <div class="container">
+
+      <!-- TITLE -->
+
 
       <!-- VRT THERAPY -->
       <div class="row standard-margin project-showcase">
