--- a/ui-ux.html
+++ b/ui-ux.html
@@ -26,11 +26,8 @@
   </head>
   <body>
     <div id="banner" class="navbar navbar-default navbar-static-top">
-         <ul>
-
-				<li>
-					<a href="./">HOME</a>
-				</li>
+      <a class="home-button" href="./">Noah Sablan</a>
+      <ul>
 				<li>
 					<a href="./3D.html">3D</a>
 				</li>
@@ -50,17 +47,19 @@
   </div>
 
   <div id="UI-UX" class = "panel">
-    <div class="container">
-
-      <!-- TITLE -->
-      <div class="row standard-margin project-showcase page-title">
-        <div class="col-6 name-Noah">
-         <div>UI+</div><div>UX</div>
+    <div class="row standard-margin project-showcase page-title">
+        <div class="col-6 name-section">
+         UI+UX
         </div>
         <div class="col-6">
 
         </div>
       </div>
+
+    <div class="container">
+
+      <!-- TITLE -->
+
 
       <div class="row standard-margin project-showcase">
         <div class="col-6">
