--- a/arch.html
+++ b/arch.html
@@ -26,11 +26,8 @@
   </head>
   <body>
     <div id="banner" class="navbar navbar-default navbar-static-top">
-         <ul>
-
-				<li>
-					<a href="./">HOME</a>
-				</li>
+      <a class="home-button" href="./">Noah Sablan</a>
+      <ul>
 				<li>
 					<a href="./3D.html">3D</a>
 				</li>
@@ -50,18 +47,19 @@
   </div>
 
     <div id="ARCH" class = "panel">
-    <div class="container">
-
-
-      <!-- TITLE -->
       <div class="row standard-margin project-showcase page-title">
-        <div class="col-6 name-Noah">
+        <div class="col-6 name-section">
          ARCHITECTURE
         </div>
         <div class="col-6">
 
         </div>
       </div>
+    <div class="container">
+
+
+      <!-- TITLE -->
+
 
       <!-- VRT THERAPY -->
       <div class="row standard-margin project-showcase">
