--- a/index.html
+++ b/index.html
@@ -25,39 +25,37 @@
 
   </head>
   <body>
-    <div id="banner" class="navbar navbar-default navbar-static-top">
-         <ul>
-
-				<li>
-					<a href="#home">HOME</a>
-				</li>
-				<li>
-					<a href="./3D.html">3D</a>
-				</li>
-				<li>
-					<a href="./ui-ux.html">UI/UX</a>
-				</li>
-                <li>
-					<a href="./product.html">PRODUCT</a>
-				</li>
-				<li>
-					<a href="./arch.html">ARCH</a>
-				</li>
-
-			</ul>
-
-        </div>
-  </div>
 
 
-        <div id="home" class = "panel">
-          <div class="container">
+<!--    <div id="banner" class="navbar navbar-default navbar-static-top">-->
+<!--         <ul>-->
+
+<!--				<li>-->
+<!--					<a href="#home">HOME</a>-->
+<!--				</li>-->
+<!--				<li>-->
+<!--					<a href="./3D.html">3D</a>-->
+<!--				</li>-->
+<!--				<li>-->
+<!--					<a href="./ui-ux.html">UI/UX</a>-->
+<!--				</li>-->
+<!--                <li>-->
+<!--					<a href="./product.html">PRODUCT</a>-->
+<!--				</li>-->
+<!--				<li>-->
+<!--					<a href="./arch.html">ARCH</a>-->
+<!--				</li>-->
+
+<!--			</ul>-->
+
+<!--        </div>-->
 
 
-            <!-- SHOWCASE SECTION-->
+<div class = "container" >
+        <div id="home" class = "home-panel">
 
 
-            <!-- VRT THERAPY -->
+
             <div class="row standard-margin project-showcase">
               <div class="col-6 name-Noah">
                 Noah Sablan
@@ -67,7 +65,6 @@
               </div>
             </div>
 
-            <!-- DMLIDE -->
             <div class="row standard-margin project-showcase">
               <div class="col title">
                 <div>I'm a designer from Guam,</div>
@@ -76,27 +73,23 @@
 
             </div>
 
-            <!-- BARHUB -->
             <div class="row standard-margin project-showcase">
               <div class="col-8">
                 <h4>BA Computer Science, Columbia University</h4>
+                  <h4>noah.a.sablan@gmail.com</h4>
+                  <h4>+1 646 617 5589</h4>
               </div>
-              <div class="col-4">
+              <div class="col-2">
+              </div>
+                <div class = "col-2 d-flex justify-content-center">
+                  <a href="./3D.html">see projects </a>
               </div>
             </div>
 
-            <div class="row standard-margin project-showcase">
-              <div class="col-8">
-                <h4>me@noahsablan.com</h4>
-                <h4>646 617 5589</h4>
-              </div>
-              <div class="col-4">
-              </div>
-            </div>
+
 
           </div>
-        </div>
-      </div>
+</div>
 
 
 
