--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="./static/home.css">
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <script src="home.js"></script>
+    <script src="./static/home.js"></script>
 
   </head>
   <body>
@@ -82,7 +82,7 @@
               <div class="col-2">
               </div>
                 <div class = "col-2 d-flex justify-content-center">
-                  <a href="./3D.html">see projects </a>
+                  <a href="./3D/">see projects </a>
               </div>
             </div>
 
