separated pages, added tiles for projects under each category

--- a/3D/vrt-therapy.html
+++ b/3D/vrt-therapy.html
@@ -29,7 +29,7 @@
       <a class="home-button" href="../">Noah Sablan</a>
       <ul>
 				<li>
-					<a href="#3D">3D</a>
+					<a href="./">3D</a>
 				</li>
 				<li>
 					<a href="../ui-ux/">UI/UX</a>
@@ -48,43 +48,51 @@
 
   <div id="3D" class = "panel">
 
+
     <div class="container">
 
-      <!-- TITLE -->
-    <div class="row standard-margin project-showcase">
-        <div class="col-6 name-section">
-         3D
+
+
+      <!-- VRT THERAPY -->
+      <div class="spacer"></div>
+      <div class="row standard-margin project-showcase">
+        <div class="col-6 title">
+          VRt Therapy
         </div>
         <div class="col-6">
-        </div>
-      </div>
-      <div class="row standard-margin project-row">
-        <div class="col-6 ">
-            <a href="./vrt-therapy.html">
-                <div class="g-r-1"></div>
-            </a>
-        </div>
-        <div class="col-6 ">
-            <a href="./dml-ide.html">
-                <div class="g-r-2"></div>
-            </a>
+          <h2>Team: Vani Jain, Nadia Jurkovich, Dana AlShehri</h2>
+          <h2>March 2021</h2>
         </div>
       </div>
 
-
-        <div class="spacer"></div>
-        <div class="row standard-margin project-showcase">
-
+      <div class="row standard-margin project-showcase">
         <div class="col-6">
-            <a href="./cg.html">
-                <div class="g-r-3"></div>
-            </a>
+          <img src="./media/vrt-1.gif" class="image-showcase mx-auto" alt="Art Therapy Game Demo">
         </div>
-        <div class="col-6">
-
+        <div class="col">
+          This project was created with the goal of successfully implementing key principles of VR application design.
+          The project needed to include elegant wayfinding, travel, selection and manipulation techniques in VR.
+          The VR platform used was the Oculus Quest 2 and the application was developed from scratch using Unity and C#.
         </div>
       </div>
 
+      <div class="row standard-margin project-showcase">
+        <div class="col-6">
+         <img src="./media/vrt-2.gif" class="image-showcase mx-auto" alt="Travel example.">
+        </div>
+        <div class="col-6">
+          <img src="./media/vrt-3.jpg" class="image-showcase mx-auto" alt="Art Therapy Game map.">
+        </div>
+      </div>
+
+      <div class="row standard-margin project-showcase">
+        <div class="col-6">
+         <img src="./media/vrt-4.gif" class="image-showcase mx-auto" alt="Art Therapy Game environment painting.">
+        </div>
+        <div class="col-6">
+          <img src="./media/vrt-5.gif" class="image-showcase mx-auto" alt="Art Therapy Game environment manipulation.">
+        </div>
+      </div>
 
 
   </div>
