--- a/product/index.html
+++ b/product/index.html
@@ -46,7 +46,11 @@
         </div>
 
     <div id="PRODUCT" class = "panel">
-      <div class="row standard-margin project-showcase page-title">
+
+    <div class="container">
+
+        <!-- TITLE -->
+      <div class="row standard-margin project-showcase">
         <div class="col-6 name-section">
          PRODUCT
         </div>
@@ -54,130 +58,16 @@
 
         </div>
       </div>
-    <div class="container">
-
-      <!-- TITLE -->
-
-
-      <div class="row standard-margin project-showcase">
-        <div class="col-6">
-          <img src="./media/datc-1.png" class="image-showcase mx-auto" alt="Re-vamped design at columbia logo.">
+      <div class="row standard-margin project-row">
+        <div class="col-6 ">
+            <a href="./barhubs.html">
+                <div class="p-r-1"></div>
+            </a>
         </div>
-        <div class="col-6">
-          <div class="title">Design @ Columbia</div>
-          <h4>Spring 2021</h4>
-         As a core team member of Design @ Columbia, I was able to aid the student-run organization's goal of fostering
-          a strong design community at Columbia University. The organization hosts panels, holds workshops and many
-          other similar collaborative events that are meant to target students of all disciplines who are interested in
-          design.
-        </div>
-      </div>
-
-
-      <div class="row standard-margin project-showcase">
-        <div class="col-4">
-          <img src="./media/datc-2.png" class="image-showcase mx-auto" alt="Marketing post example.">
-        </div>
-        <div class="col-4">
-          <img src="./media/datc-5.png" class="image-showcase mx-auto" alt="Marketing post example for social media.">
-        </div>
-        <div class="col-4">
-          <img src="./media/datc-3.png" class="image-showcase mx-auto" alt="Panel marketing post example.">
-        </div>
-      </div>
-
-      <div class="row standard-margin project-showcase">
-        <div class="col">
-         My role involved strategizing our organization's re-branding. This involved developing a new visual language
-          for the organization. Working with the Marketing Coordinator Wendy Sung and Design Lead Laura Block, we
-          drafted different languages and styles, using various iteration strategies.
-        </div>
-      </div>
-
-      <div class="row standard-margin project-showcase">
-        <div class="col">
-         <img src="./media/datc-7.png" class="image-showcase mx-auto" alt="Design at columbia re-branding reference board.">
-        </div>
-      </div>
-
-      <div class="row standard-margin project-showcase">
-        <div class="col">
-         <img src="./media/datc-4.png" class="image-showcase mx-auto" alt="Design at columbia marketing example.">
-        </div>
-      </div>
-
-      <!--BARHUB-->
-      <div class="row standard-margin project-showcase">
-        <div class="col-6">
-          <div class="title">BarHub</div>
-          <h2>Professor Harry West</h2>
-          <h4>Team Members: Shawn Amirthan, Meghna Mehta, Sebastian Sanchez</h4>
-          <h4>Fall 2020</h4>
-        </div>
-      </div>
-
-      <div class="row standard-margin project-showcase">
-        <div class="col-6">
-         The design challenge assigned for the semester was a challenge to “design for density” in a world that is
-          currently suffering from a pandemic. Our team’s territory was city nightlife, we were challenged to create
-          some sort of intervention that completed some goal within this territory. We found through research that
-          there is an opportunity to provide the necessary safety measures to optimize customer experience and revenue
-          streams at nightlife establishments.
-        </div>
-        <div class="col-6">
-          <img src="./media/barhub-1.png" class="image-showcase mx-auto" alt="Barhub logo">
-        </div>
-      </div>
-
-      <div class="row standard-margin project-showcase">
-        <div class="col">
-          Research showed us that as the COVID-19 pandemic causes a more regulated nightlife experience, bar owners
-          were struggling to pay their employees and make rent. Attendance at bars and nightlife venues was declining
-          and constrained. We discovered through interviews that the social landscape of bars has changed completely,
-          and that customers were forced to compromise this social aspect in their night time outings.
-        </div>
-      </div>
-
-      <div class="row standard-margin project-showcase">
-        <div class="col">
-          <img src="./media/barhub-3.jpg" class="image-showcase mx-auto" alt="Territory research">
-        </div>
-      </div>
-
-      <div class="row standard-margin project-showcase">
-        <div class="col">
-          <img src="./media/barhub-2.png" class="image-showcase mx-auto" alt="Customer research">
-        </div>
-      </div>
-
-
-      <div class="row standard-margin project-showcase">
-        <div class="col">
-          We reframed the idea with research and customer interviews in mind. We were able to create and reinforce an
-          outdoor solution by implementing a space that brought multiple bars from a local area to New York City open streets.
-          The idea was that an outdoor COVID-19 safe environment that attracted customers with a multi-bar experience would
-          serve as a substitute for indoor bars and would bring back a bar-like atmosphere without the customers
-          compromising their own safety.
-        </div>
-      </div>
-
-      <div class="row standard-margin project-showcase">
-        <div class="col">
-          <img src="./media/barhub-4.gif" class="image-showcase mx-auto" alt="Barhub video showcase">
-        </div>
-      </div>
-
-      <div class="row standard-margin project-showcase">
-        <div class="col">
-          <img src="./media/barhub-5.gif" class="image-showcase mx-auto" alt="Barhub video showcase.">
-        </div>
-      </div>
-
-      <div class="row standard-margin project-showcase">
-        <div class="col">
-         The solution showed BarHub is able to provide consistent experience that is exciting each visit, due to its
-          changing bar variety and vibrant, safe  atmosphere. This experience was built with bar owners and staff in
-          mind, in order to allow them to both advertise and sell their drinks at a satellite location.
+        <div class="col-6 ">
+            <a href="./d-at-c.html">
+                <div class="p-r-2"></div>
+            </a>
         </div>
       </div>
 
