--- a/ui-ux/amot.html
+++ b/ui-ux/amot.html
@@ -32,54 +32,66 @@
 					<a href="../3D/">3D</a>
 				</li>
 				<li>
-					<a href="../ui-ux/">UI/UX</a>
+					<a href="./">UI/UX</a>
 				</li>
                 <li>
 					<a href="../product/">PRODUCT</a>
 				</li>
 				<li>
-					<a href="#ARCH">ARCH</a>
+					<a href="../arch/">ARCH</a>
 				</li>
 
 			</ul>
 
         </div>
 
-
-    <div id="ARCH" class = "panel">
-
+  <div id="UI-UX" class = "panel">
     <div class="container">
 
-
       <!-- TITLE -->
-      <div class="row standard-margin project-showcase">
-        <div class="col-6 name-section">
-         ARCHITECTURE
+
+      <div class="spacer"></div>
+
+            <div class="row standard-margin project-showcase">
+        <div class="col-6">
+          <div class="title">Åmot Farm Inc. Website</div>
+
         </div>
         <div class="col-6">
-
-        </div>
-      </div>
-      <div class="row standard-margin project-row">
-        <div class="col-6 ">
-            <a href="./nfl.html">
-                <div class="a-r-1"></div>
-            </a>
-        </div>
-        <div class="col-6 ">
-            <a href="./floodplain.html">
-                <div class="a-r-2"></div>
-            </a>
+          <h2>Guam, 2017</h2>
+          <p>I was brought on to the project to design the website for a local farm-to-table organization that promotes traditional
+            medicines. The project would give the organization an online presence allowing it to be more accessible to
+            those who wish to contact them or use their services.</p>
         </div>
       </div>
 
+      <div class="row standard-margin project-showcase">
+        <div class="col-6">
 
+            <img src="./media/amot-1.png" class="image-showcase mx-auto" alt="Art Therapy Game Demo">
+        </div>
 
+        <div class="col-6">
+          <img src="./media/amot-2.png" class="image-showcase mx-auto" alt="Art Therapy Game Demo">
+        </div>
+
+      </div>
+
+      <div class="row standard-margin project-showcase">
+        <div class="col-6">
+
+            <img src="./media/amot-3.png" class="image-showcase mx-auto" alt="Art Therapy Game Demo">
+        </div>
+
+        <div class="col-6">
+          <img src="./media/amot-4.png" class="image-showcase mx-auto" alt="Art Therapy Game Demo">
+        </div>
+
+      </div>
 
   </div>
 
   </div>
-
 
 
 
