--- a/ui-ux/birdle.html
+++ b/ui-ux/birdle.html
@@ -32,44 +32,48 @@
 					<a href="../3D/">3D</a>
 				</li>
 				<li>
-					<a href="../ui-ux/">UI/UX</a>
+					<a href="./">UI/UX</a>
 				</li>
                 <li>
 					<a href="../product/">PRODUCT</a>
 				</li>
 				<li>
-					<a href="#ARCH">ARCH</a>
+					<a href="../arch/">ARCH</a>
 				</li>
 
 			</ul>
 
         </div>
 
-
-    <div id="ARCH" class = "panel">
-
+  <div id="UI-UX" class = "panel">
     <div class="container">
 
-
       <!-- TITLE -->
+
+      <div class="spacer"></div>
+
       <div class="row standard-margin project-showcase">
-        <div class="col-6 name-section">
-         ARCHITECTURE
+        <div class="col-6">
+          <div class="title">Birdle</div>
+
         </div>
         <div class="col-6">
-
+           <h2>Professor Lydia Chilton</h2>
+          <h2>February 2020</h2>
+          <p>Given as a project for a User Interface Design class taught by Lydia Chilton, the goal of this project was to
+            teach about the kinds of birds that reside in Guam and the Marianas Islands. The user is able to find information on the
+            variety of both endemic and ecdemic avians available in this easy to use database.</p>
         </div>
       </div>
-      <div class="row standard-margin project-row">
-        <div class="col-6 ">
-            <a href="./nfl.html">
-                <div class="a-r-1"></div>
-            </a>
+
+      <div class="row standard-margin project-showcase">
+        <div class="col">
+
+            <img src="./media/birdle-1.png" class="image-showcase mx-auto" alt="birdle home page">
         </div>
-        <div class="col-6 ">
-            <a href="./floodplain.html">
-                <div class="a-r-2"></div>
-            </a>
+
+        <div class="col-6">
+          <img src="./media/birdle-2.png" class="image-showcase mx-auto" alt="birdle search results">
         </div>
       </div>
 
@@ -79,7 +83,6 @@
   </div>
 
   </div>
-
 
 
 
