--- a/ui-ux/perfect-shot.html
+++ b/ui-ux/perfect-shot.html
@@ -32,54 +32,54 @@
 					<a href="../3D/">3D</a>
 				</li>
 				<li>
-					<a href="../ui-ux/">UI/UX</a>
+					<a href="./">UI/UX</a>
 				</li>
                 <li>
 					<a href="../product/">PRODUCT</a>
 				</li>
 				<li>
-					<a href="#ARCH">ARCH</a>
+					<a href="../arch/">ARCH</a>
 				</li>
 
 			</ul>
 
         </div>
 
-
-    <div id="ARCH" class = "panel">
-
+  <div id="UI-UX" class = "panel">
     <div class="container">
 
-
       <!-- TITLE -->
+
+      <div class="spacer"></div>
+
       <div class="row standard-margin project-showcase">
-        <div class="col-6 name-section">
-         ARCHITECTURE
+        <div class="col-6">
+          <div class="title">Perfect Shot</div>
+
         </div>
         <div class="col-6">
-
-        </div>
-      </div>
-      <div class="row standard-margin project-row">
-        <div class="col-6 ">
-            <a href="./nfl.html">
-                <div class="a-r-1"></div>
-            </a>
-        </div>
-        <div class="col-6 ">
-            <a href="./floodplain.html">
-                <div class="a-r-2"></div>
-            </a>
+           <h2>Professor Lydia Chilton</h2>
+          <h2>March 2020</h2>
+          <p>This application was designed as a high fidelity prototype of an application that taught users how to shoot
+          manual mode on a camera.</p>
         </div>
       </div>
 
+      <div class="row standard-margin project-showcase">
+        <div class="col-12">
+            <img src="./media/ps-1.png" class="image-showcase mx-auto" alt="Perfect Shot iso learning page.">
+
+          <img src="./media/ps-2.png" class="image-showcase mx-auto" alt="Perfect Shot quiz page.">
+
+          <img src="./media/ps-3.png" class="image-showcase mx-auto" alt="Perfect shot shutter speed page.">
+        </div>
+      </div>
 
 
 
   </div>
 
   </div>
-
 
 
 
