--- a/3D/index.html
+++ b/3D/index.html
@@ -81,7 +81,9 @@
             </a>
         </div>
         <div class="col-6">
-
+            <a href="./solAR.html">
+                <div class="g-r-4"></div>
+            </a>
         </div>
       </div>
 
