--- a/3D/solAR.html
+++ b/3D/solAR.html
@@ -52,51 +52,50 @@
     <div class="container">
 
 
-
-      <!-- VRT THERAPY -->
+      <!-- GRAPHICS -->
       <div class="spacer"></div>
       <div class="row standard-margin project-showcase">
         <div class="col-6 title">
-          VRt Therapy
+          solAR
         </div>
         <div class="col-6">
-          <h2>Team: Vani Jain, Nadia Jurkovich, Dana AlShehri</h2>
-          <h2>March 2021</h2>
+          <h2>Professor Steven Feiner, Columbia University</h2>
+          <h2>Spring 2021</h2>
         </div>
-      </div>
-
-      <div class="row standard-margin project-showcase"><div class="col-md-12 d-flex justify-content-center"><iframe width="560" height="315" src="https://www.youtube.com/embed/IFR1D2-oVvU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-6">
-          <img src="./media/vrt-1.gif" class="image-showcase mx-auto" alt="Art Therapy Game Demo">
-        </div>
         <div class="col">
-          This project was created with the goal of successfully implementing key principles of VR application design.
-          The project needed to include elegant wayfinding, travel, selection and manipulation techniques in VR.
-          The VR platform used was the Oculus Quest 2 and the application was developed from scratch using Unity and C#.
+          This was a project assignment that was intended as practice for coding in AR. The AR library Vuforia was used in conjunction with Unity.
+          Target images were used for placement of the solar system as well as wand usage that allowed selection and mani
+          pulation. The final product was a Unity developed game that allowed the user to create a solar system in AR by altering
+          planet and moon counts, changing orbital radii, and resizing of planets and moons. Collisions between planets and moons
+          would be caught and shown to the user as error. Adding and deleting orbitals also added and deleted a visual disk
+          representation of their orbit path.
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
         <div class="col-6">
-         <img src="./media/vrt-2.gif" class="image-showcase mx-auto" alt="Travel example.">
+         <img src="./media/solAR-1.png" class="image-showcase mx-auto" alt="Solar system on image target.">
         </div>
         <div class="col-6">
-          <img src="./media/vrt-3.jpg" class="image-showcase mx-auto" alt="Art Therapy Game map.">
+          <img src="./media/solAR-2.png" class="image-showcase mx-auto" alt="Editing orbital using second image target.">
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
         <div class="col-6">
-         <img src="./media/vrt-4.gif" class="image-showcase mx-auto" alt="Art Therapy Game environment painting.">
+         <img src="./media/solAR-4.png" class="image-showcase mx-auto" alt="Adding orbitals using image target.">
         </div>
         <div class="col-6">
-          <img src="./media/vrt-5.gif" class="image-showcase mx-auto" alt="Art Therapy Game environment manipulation.">
+          <img src="./media/solAR-5.png" class="image-showcase mx-auto" alt="Selection using third image target.">
         </div>
       </div>
 
+
+
+      <!-- END GRAPHICS SECTION-->
 
   </div>
   </div>
@@ -108,4 +107,3 @@
 
 
   </body>
-</html>
