minor page edits

--- a/arch/floodplain.html
+++ b/arch/floodplain.html
@@ -86,7 +86,13 @@
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col">
+        <div class="col-12">
+          <img src="./media/flood-2.png" class="image-showcase mx-auto" alt="Floodplain final model exploration.">
+        </div>
+      </div>
+
+      <div class="row standard-margin project-showcase">
+        <div class="col-12">
           <img src="./media/flood-4.png" class="image-showcase mx-auto" alt="Floodplain final model exploration.">
         </div>
       </div>
