--- a/ui-ux/amot.html
+++ b/ui-ux/amot.html
@@ -50,15 +50,18 @@
 
       <!-- TITLE -->
 
+
       <div class="spacer"></div>
 
             <div class="row standard-margin project-showcase">
         <div class="col-6">
           <div class="title">Åmot Farm Inc. Website</div>
+                    <h2>Guam, 2017</h2>
 
         </div>
         <div class="col-6">
-          <h2>Guam, 2017</h2>
+          <div class="spacer"></div>
+
           <p>I was brought on to the project to design the website for a local farm-to-table organization that promotes traditional
             medicines. The project would give the organization an online presence allowing it to be more accessible to
             those who wish to contact them or use their services.</p>
