--- a/ui-ux/cvc.html
+++ b/ui-ux/cvc.html
@@ -53,29 +53,34 @@
       <div class="spacer"></div>
 
       <!-- COLUMBIA VIRTUAL CAMPUS -->
-      <div class="row standard-margin project-showcase">
-        <div class="col-6">
-           <img src="./media/cvc-1.png" class="image-showcase mx-auto" alt="Columbia virtual campus collage">
-        </div>
 
-        <div class="col-6">
+      <div class="row standard-margin project-showcase">
+        <div class="col-12">
+
+          <img src="./media/cvc-1.png" class="image-showcase mx-auto" alt="Columbia virtual campus collage">
+        </div>
+      </div>
+
+      <div class="row standard-margin project-showcase">
+        <div class="col-12">
           <div class="title">Columbia Virtual Campus</div>
-          <h2>UX Designer</h2>
+
+                  <h2>UX Designer</h2>
           <h2>August 2020</h2>
+
         </div>
+
+
 
       </div>
 
 
-      <div class="row standard-margin project-showcase">
-        <div class="col">
-          Columbia Virtual Campus was designed to serve the Columbia Community during the COVID-19 pandemic by offering
-          virtual events and resources to students who found themselves in no circumstances.
-        </div>
-      </div>
 
       <div class="row standard-margin project-showcase">
         <div class="col">
+          <div>Columbia Virtual Campus was designed to serve the Columbia Community during the COVID-19 pandemic by offering
+          virtual events and resources to students who found themselves in no circumstances.</div>
+          <div class="spacer"></div>
           <div>
           One task presented was to create a new page for the Columbia Virtual Campus Website. We took a traditional design
           approach and ideated, iterated and got feedback on prototypes before pushing a final design to the developer team.
