--- a/ui-ux/perfect-shot.html
+++ b/ui-ux/perfect-shot.html
@@ -65,13 +65,30 @@
         </div>
       </div>
 
+        <div class="row standard-margin project-showcase justify-content-center">
+
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/GUk3zV3EjPo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        </div>
+
       <div class="row standard-margin project-showcase">
-        <div class="col-12">
+
+        <div class="col-6 justify-content-center">
             <img src="./media/ps-1.png" class="image-showcase mx-auto" alt="Perfect Shot iso learning page.">
+        </div>
 
-          <img src="./media/ps-2.png" class="image-showcase mx-auto" alt="Perfect Shot quiz page.">
+          <div class="col-6 justify-content-center">
+            <img src="./media/ps-2.png" class="image-showcase mx-auto" alt="Perfect Shot quiz page.">
+          </div>
+      </div>
 
+
+        <div class="row standard-margin project-showcase">
+            <div class="col-12 justify-content-center">
           <img src="./media/ps-3.png" class="image-showcase mx-auto" alt="Perfect shot shutter speed page.">
+            </div>
+        </div>
+
         </div>
       </div>
 
