--- a/3D/dml-ide.html
+++ b/3D/dml-ide.html
@@ -58,19 +58,19 @@
           DML-IDE
         </div>
         <div class="col-6">
-          <h2>Professor Hod Lipson, Sofia Wyetzner</h2> <h3>Creative Machines Lab, Columbia University</h3>
-          <h2>June - December 2019</h2>
+          <h3>Professor Hod Lipson, Sofia Wyetzner</h3> <h4>Creative Machines Lab, Columbia University</h4>
+          <h4>June - December 2019</h4>
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col">
+        <div class="col-12">
         <img src="./media/dml-1.gif" class="image-showcase mx-auto" alt="GE Jet Engine Bracket optimization.">
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col">
+        <div class="col-12">
           <p>I was assigned to test and debug a program being developed by the Creative Machines Lab at Columbia University,
             the Design Model Language interactive development environment.</p>
           <p>My role as an undergraduate researcher was to test the program by creating different structures to simulate and
@@ -80,10 +80,13 @@
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-6">
+        <div class="col-12">
          <img src="./media/dml-2.gif" class="image-showcase mx-auto" alt="Torsional beam optimization.">
         </div>
-        <div class="col-6">
+      </div>
+
+      <div class="row standard-margin project-showcase">
+        <div class="col-12">
          The program, developed in C++, is used to render 3D structures as mass-spring objects and simulate forces on it.
           The program then optimizes the mass of the structure by removing springs under the least amount of stress.
           The program halts when the object reaches a certain deflection rate or percentage of original mass remaining.
@@ -91,14 +94,17 @@
       </div>
 
       <div class="row standard-margin project-showcase">
-        <div class="col-6">
+        <div class="col-12">
         The Interactive Development Environment was used to simulate any imported volume under a specified force.
           This volume was the result of a cantilever beam subject to a torsional force on one end.
           The result is a hollowed rectangular prism of springs with a spiraling effect.
           My role was to ensure that the program was able to handle different cases and simulations, making it more
           applicable to different real-world uses.
         </div>
-        <div class="col-6">
+      </div>
+
+      <div class="row standard-margin project-showcase">
+        <div class="col-12">
           <div class="Sirv" data-src="https://capprous.sirv.com/Screen%20Recording%202020-03-23%20at%2012.34.54%20PM/Screen%20Recording%202020-03-23%20at%2012.34.54%20PM.spin"></div>
           <script src="https://scripts.sirv.com/sirv.js"></script>
         </div>
@@ -122,6 +128,25 @@
           </p>
         </div>
       </div>
+
+      <div class="row standard-margin project-showcase">
+        <div class="col-12">
+         <img src="./media/dml-3.png" class="image-showcase mx-auto" alt="Nvidia visual profiler.">
+        </div>
+      </div>
+
+      <div class="row standard-margin project-showcase">
+        <div class="col-6">
+         <img src="./media/dml-6.png" class="image-showcase mx-auto" alt="Bracket before optimization.">
+        </div>
+        <div class="col-6">
+         <img src="./media/dml-5.gif" class="image-showcase mx-auto" alt="Bracket after optimization.">
+        </div>
+      </div>
+
+      <div class="spacer"></div>
+
+
 
       <!-- END DML-IDE SECTION-->
 
