--- a/product/barhubs.html
+++ b/product/barhubs.html
@@ -85,13 +85,13 @@
 
       <div class="row standard-margin project-showcase">
         <div class="col">
-          <img src="./media/barhub-3.jpg" class="image-showcase mx-auto" alt="Territory research">
+          <img src="./media/barhub-2.png" class="image-showcase mx-auto" alt="Territory research">
         </div>
       </div>
 
       <div class="row standard-margin project-showcase">
         <div class="col">
-          <img src="./media/barhub-2.png" class="image-showcase mx-auto" alt="Customer research">
+          <img src="./media/barhub-3.jpg" class="image-showcase mx-auto" alt="Customer research">
         </div>
       </div>
 
