--- a/product/d-at-c.html
+++ b/product/d-at-c.html
@@ -56,7 +56,7 @@
         </div>
         <div class="col-6">
           <div class="title">Design @ Columbia</div>
-          <h4>Spring 2021</h4>
+          <h4>Spring 2021 - Current</h4>
          As a core team member of Design @ Columbia, I was able to aid the student-run organization's goal of fostering
           a strong design community at Columbia University. The organization hosts panels, holds workshops and many
           other similar collaborative events that are meant to target students of all disciplines who are interested in
