--- a/ui-ux/ambient.html
+++ b/ui-ux/ambient.html
@@ -71,16 +71,25 @@
           <div>
             "In light of recent events, most of the normal campus activities have been suspended,
             but we can still maintain our community through virtual campus experiences."
-          </div>
-          <div>
             - From Virtual Campus Design Challenge prompt
           </div>
         </div>
       </div>
 
+      <div class="spacer"></div>
       <div class="row standard-margin project-showcase">
         <div class="col-6">
           <img src="./media/ambient-2.jpg" class="image-showcase mx-auto" alt="Ambient brainstorming diagram.">
+
+        </div>
+        <div class="col-6">
+          <img src="./media/ambient-3.png" class="image-showcase mx-auto" alt="Ambient feedback pop-up.">
+
+        </div>
+      </div>
+
+            <div class="row standard-margin project-showcase">
+        <div class="col-6">
           <div>
             At the outset, I was inspired by ambient loops that I often listened to that simulated the experience of
             being somewhere I wasn’t. I liked to listen to the ones where I was by the beach, listening to the crashing
@@ -89,7 +98,6 @@
           </div>
         </div>
         <div class="col-6">
-          <img src="./media/ambient-3.png" class="image-showcase mx-auto" alt="Ambient feedback pop-up.">
           <div>
             I began by cataloging various soundscapes around campus from my experience. I was able to organize and
             create descriptions of what soundbites would be prevalent in each of the spaces. For example, in one of my
@@ -103,6 +111,11 @@
       <div class="row standard-margin project-showcase">
         <div class="col">
           <img src="./media/ambient-4.png" class="image-showcase mx-auto" alt="Art Therapy Game Demo">
+        </div>
+      </div>
+
+      <div class="row standard-margin project-showcase">
+        <div class="col">
           <div>
             The final design was a web application that was functional and allowed the user to choose from different
             spaces of different categories and listen in on a loop of ambient audio that simulates the atmosphere of
