working mobile navbar

--- a/ui-ux/index.html
+++ b/ui-ux/index.html
@@ -19,10 +19,6 @@
     <link rel="stylesheet" href="../static/home.css">
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-    <script src="../static/home.js"></script>
-
   </head>
   <body>
 <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
@@ -110,6 +106,15 @@
 
 
 
+<!-- JQUERY AND POPPER before bootstrap.js -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+
+<!-- Bootstrap JS -->
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+<!-- Custom JS -->
+    <script src="../static/home.js"></script>
 
   </body>
 </html>
